# fastapi-async-performance

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/routes/: telemetry.py
app/schemas/: __init__.py  telemetry.py
app/services/: validation.py
tests/: conftest.py  test_api.py  test_lifespan_starlette.py  test_models_telemetry.py  test_routes_health.py  test_routes_telemetry.py  test_schema_value_branches.py  test_validation_service.py
