[project]
name = "fastapi-async-performance"
version = "0.1.0"
description = "High-throughput async FastAPI demo: IoT-style telemetry validation (portfolio)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "gunicorn>=23.0.0",
    "pydantic>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "pytest-cov>=5.0.0",
    "black>=24.10.0",
    "flake8>=7.1.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
branch = true
source = ["app"]
omit = ["app/__init__.py", "app/api/__init__.py", "app/api/routes/__init__.py", "app/schemas/__init__.py", "app/services/__init__.py"]

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = false
fail_under = 92
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
